Add 1C vacation request endpoint
